HAP-38:fix property gap footer

--- a/src/components/Footer/FooterDesktop/FooterDesktop.module.scss
+++ b/src/components/Footer/FooterDesktop/FooterDesktop.module.scss
@@ -20,17 +20,16 @@
     flex-direction: column;
     padding-left: 0;
     padding-bottom: 0;
-    gap: 0;
   }
 
   display: flex;
   width: 100%;
   align-items: center;
   padding-bottom: 51.63px;
-  gap: 7vw;
   padding-top: 50px;
 
   &_title {
+    margin-right: 7vw;
     @media screen and (max-width: $lg-size) {
       padding-bottom: 25px;
       border-bottom: 1.8px solid $brown;
@@ -62,13 +61,20 @@
 
   &_menu {
     display: flex;
-    gap: 6%;
     text-align: center;
     padding: 30px 0;
-
+li{
+  &:nth-child(2n){
+    margin: 0 6%;
+  }
+}
     @media screen and (max-width: $xl-size) {
-      gap: 3%;
       justify-content: center;
+      li{
+        &:nth-child(2n){
+          margin: 0 3%;
+        }
+      }
     }
 
     &_item {
@@ -114,7 +120,6 @@
     flex-direction: column;
     align-items: flex-end;
     width: 100%;
-    gap: 4%;
 
 
 
